--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -46,60 +46,6 @@ jobs:
           echo "Working directory:"
           pwd
           ls -la
-              
-      - name: Make Scripts Executable
-        shell: bash
-        run: | 
-          if [ -d ".github/scripts" ]; then
-            chmod +x .github/scripts/*.sh
-          else
-          echo "No scripts directory found, skipping"
-          fi
-          
-      - name: Update Cache
-        if: always()
-        shell: bash --noprofile --norc -e -o pipefail {0}
-        run: |
-          echo "Cache paths prepared for saving"
-          
-          # Check if directories exist before counting files
-          if [ -d "/mingw64/bin" ]; then
-            echo "Mingw64 bin file count: $(ls -la /mingw64/bin | wc -l)"
-          else
-            echo "Mingw64 bin directory not found"
-          fi
-          
-          if [ -d "/var/cache/pacman/pkg" ]; then
-            echo "Pacman package cache count: $(ls -la /var/cache/pacman/pkg | wc -l)"
-          else
-            echo "Pacman package cache directory not found (normal for first run)"
-            # Create the directory without sudo - use mkdir with parents flag
-            mkdir -p /var/cache/pacman/pkg || echo "Note: Could not create pacman cache directory (may require admin)"
-          fi
-          
-          if [ -d "/mingw64/lib" ]; then
-            echo "Mingw64 lib file count: $(ls -la /mingw64/lib | wc -l)"
-          else
-            echo "Mingw64 lib directory not found"
-          fi
-          
-          if [ -d "/mingw64/include" ]; then
-            echo "Mingw64 include file count: $(ls -la /mingw64/include | wc -l)"
-          else
-            echo "Mingw64 include directory not found"
-          fi
-          
-          # Force PATH refresh and hash table reset
-          hash -r
-          
-          echo "Cache directories are ready for next run"
-
-      - name: Install build dependencies
-        shell: bash
-        env:
-          MSYSTEM: MINGW64
-          PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
-        run: ./.github/scripts/install-deps.sh    
       
       - name: Cache Pacman Packages
         uses: actions/cache@v4
@@ -111,8 +57,30 @@ jobs:
             /mingw64/include
           key: mingw64-deps-${{ runner.os }}-${{ hashFiles('PKGBUILD') }}
           restore-keys: |
-            mingw64-deps-${{ runner.os }}-    
+            mingw64-deps-${{ runner.os }}-  
+                
+      - name: Make Scripts Executable
+        shell: bash
+        run: | 
+            if [ -d ".github/scripts" ]; then
+              chmod +x .github/scripts/*.sh
+            else
+            echo "No scripts directory found, skipping"
+            fi
       
+      - name: Install build dependencies
+        shell: bash
+        env:
+          MSYSTEM: MINGW64
+          PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
+        run: ./.github/scripts/install-deps.sh    
+            
+    # Update cache AFTER installing dependencies  
+      - name: Update Cache
+        if: always()
+        shell: bash --noprofile --norc -e -o pipefail {0}
+        run: ./.github/scripts/update-cache.sh   
+     
       - name: Verify Build Tools
         shell: bash
         env:
